# strata

./: .gitignore  CLAUDE.md  README.md  migrate.sh  pyproject.toml  railpack.json  requirements.txt  system_prompt.txt
docs/: auth.md  decisions.md  dow_enrichment.md  dow_schema_v2.md  features_built.md  findings.md  ingest.md  possible_customers.md  sam_api.md  sam_gov_terms_of_service.txt  strata_canon.md  to_build.md  usaspending_api.md
infra/: env.example
migrations/: 0001_drop_processed_by_llm_at.sql  0002_add_extracted_entities_extracted_events.sql  0003_add_entities_extracted_at.sql  0004_rename_extracted_name_columns.sql  0005_add_extracted_entity_type_jurisdiction.sql  0006_add_canonical_entities_entity_links.sql  0007_add_canonical_status.sql  0008_add_article_domains.sql  0009_add_domains_extracted_at.sql  0010_extracted_entities_per_article.sql  0011_add_hq_fields.sql  0012_add_confirmed_domain.sql  0013_drop_canonical_status.sql  0014_expand_news_source_enum.sql  0015_add_fcc_icfs_source.sql  0016_add_icfs_tables.sql  0017_polymorphic_extracted_source.sql  0018_add_icfs_relation_fields.sql  0019_add_icfs_canonical_entities.sql  0020_add_pleadings_entities_extracted_at.sql  0021_add_icfs_notice_documents.sql  0022_add_icfs_ingest_state.sql  0023_add_llm_summary_to_extracted_events.sql  0024_add_excerpt_and_signal_tier.sql  0025_icfs_filing_details.sql  0026_icfs_filing_attachments.sql  0027_icfs_pleading_details.sql  0028_raw_detail.sql  0029_icfs_filing_action_history.sql  0030_ingest_runs.sql  0031_dow_contract_releases.sql  0032_dow_raw_html.sql  (+19 more)
(+84 files in other folders)
