[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "strata-core"
version = "0.1.0"
description = "Core models and services for the Strata backend"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["strata_core*"]
